--- a/H_minus_trace.ui
+++ b/H_minus_trace.ui
@@ -26,7 +26,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>C:/Users/Sanin/.designer/backup/icon.png</normaloff>C:/Users/Sanin/.designer/backup/icon.png</iconset>
+    <normaloff>../../../Sanin/.designer/backup/icon.png</normaloff>../../../Sanin/.designer/backup/icon.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="sizePolicy">
@@ -40,7 +40,7 @@
      <number>13</number>
     </property>
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout" stretch="10,0">
+     <layout class="QHBoxLayout" name="horizontalLayout" stretch="10,2,0,1">
       <property name="topMargin">
        <number>0</number>
       </property>
@@ -101,7 +101,7 @@
        </layout>
       </item>
       <item>
-       <layout class="QGridLayout" name="gridLayout" columnstretch="1,0,0">
+       <layout class="QGridLayout" name="gridLayout" columnstretch="1,1,1">
         <property name="topMargin">
          <number>0</number>
         </property>
@@ -429,6 +429,31 @@
          </widget>
         </item>
        </layout>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>20</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>&gt;</string>
+        </property>
+        <property name="checkable">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QListView" name="listView"/>
       </item>
      </layout>
     </item>
